css/style.css
/* *****************************************
* Variables
* *****************************************/
:root {
    /* Palette */
    --col-dark: #2c3e50;
    --col-secondary: #3a546d;
    --col-green: #1ABC9C;

    /* Custom Bootstrap Colors */
    --bs-dark-rgb: 44, 62, 80;
    --bs-secondary-rgb: 58, 84, 109;
    --bs-success-rgb: 26, 188, 156;
}

/* Custom Bootstrap Buttons */
.btn-success {
    --bs-btn-bg: #1ABC9C;
    --bs-btn-border-color: #1ABC9C;
    --bs-btn-disabled-bg: #1ABC9C;
    --bs-btn-disabled-border-color: #1ABC9C;
}



/* *****************************************
! Debug
* *****************************************/
.debug .db-border {
    border: 2px dashed #000;
}

.debug .db-h-1x {
    min-height: 50px;
}

.debug .db-h-2x {
    min-height: 400px;
}

.debug .container-fluid {
    border: 2px dashed purple;
}

.debug .container {
    border: 2px dashed red;
}

.debug .row {
    border: 2px dashed blue;
}

.debug [class^="col"] {
    border: 2px dashed yellow;
}


/* **********************************************************************************
? ELEMENTS
* ***********************************************************************************/

/* *****************************************
* Jumbotron
* *****************************************/
#main-jumbotron img {
    width: 250px;
}


/* *****************************************
* Contact
* *****************************************/
#contact .form-control {
    border-radius: 0;
    border-width: 0 0 1px 0;
}

#contact .form-control::placeholder {
    color: #000;
    border-radius: 0;
    border-width: 0 0 1px 0;
}

#contact .form-control:focus {
    box-shadow: none;
    border-color: #000;
}

#contact textarea {
    height: 200px;
}


/* *****************************************
* Social Bar
* *****************************************/
.social-bar a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 52px;
    height: 52px;
}


/* *****************************************
* Separator
* *****************************************/
.sep {
    position: relative;
    font-size: 1.5rem;
}

.sep::after,
.sep::before {
    content: '';
    width: 12vw;
    max-width: 150px;
    height: 4px;
    background-color: currentColor;
    border-radius: 2px;
    position: absolute;
    top: 50%;
}

.sep::after {
    right: 50%;
    transform: translateX(-1em);
}

.sep::before {
    left: 50%;
    transform: translateX(1em);
}


/* **********************************************************************************
? RESPONSIVE
* ***********************************************************************************/

/* MD */
@media screen and (min-width: 768px) {

    /* *****************************************
    * Generics
    * *****************************************/
    h1 {
        font-size: 3.5rem;
    }

    h2 {
        font-size: 3rem;
    }

    h5 {
        font-size: 1.7rem;
    }


    /* *****************************************
    * Jumbotron
    * *****************************************/
    #main-jumbotron p {
        font-size: 1.5rem;
    }

}

